--- a/indicarprocess/imagery/locale/pt_BR/LC_MESSAGES/django.po
+++ b/indicarprocess/imagery/locale/pt_BR/LC_MESSAGES/django.po
@@ -7,16 +7,40 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-07-06 17:29-0300\n"
-"PO-Revision-Date: 2015-07-06 17:46-0300\n"
+"POT-Creation-Date: 2015-07-06 18:00-0300\n"
+"PO-Revision-Date: 2015-07-06 18:01-0300\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"Last-Translator: \n"
-"Language-Team: \n"
 "X-Generator: Poedit 1.8.2\n"
+
+#: imagery/models.py:32 imagery/templates/imagery/scene_list.html:43
+msgid "Downloading"
+msgstr "Download em andamento"
+
+#: imagery/models.py:33 imagery/templates/imagery/scene_list.html:42
+msgid "Download Failed"
+msgstr "Download falhou"
+
+#: imagery/models.py:34 imagery/templates/imagery/scene_list.html:41
+msgid "Downloaded"
+msgstr "Download finalizado"
+
+#: imagery/models.py:35 imagery/templates/imagery/scene_list.html:40
+msgid "Processing"
+msgstr "Processando"
+
+#: imagery/models.py:36
+msgid "Processing Failed"
+msgstr "Processamento falhou"
+
+#: imagery/models.py:37 imagery/templates/imagery/scene_list.html:38
+msgid "Processed"
+msgstr "Processada"
 
 #: imagery/models.py:307
 msgid "There is already a scheduled scene with this path and row."
@@ -96,29 +120,9 @@ msgstr "Cena"
 msgid "Satellite"
 msgstr "Satélite"
 
-#: imagery/templates/imagery/scene_list.html:38
-msgid "Processed"
-msgstr "Processada"
-
 #: imagery/templates/imagery/scene_list.html:39
-msgid "Process failed"
+msgid "Process Failed"
 msgstr "Processamento falhou"
-
-#: imagery/templates/imagery/scene_list.html:40
-msgid "Processing"
-msgstr "Processando"
-
-#: imagery/templates/imagery/scene_list.html:41
-msgid "Downloaded"
-msgstr "Download finalizado"
-
-#: imagery/templates/imagery/scene_list.html:42
-msgid "Download failed"
-msgstr "Download falhou"
-
-#: imagery/templates/imagery/scene_list.html:43
-msgid "Downloading"
-msgstr "Download em andamento"
 
 #: imagery/templates/imagery/scene_list.html:49
 msgid "Max Cloud Rate"
