--- a/indicarprocess/locale/pt_BR/LC_MESSAGES/django.po
+++ b/indicarprocess/locale/pt_BR/LC_MESSAGES/django.po
@@ -7,25 +7,40 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-10-21 14:20-0200\n"
-"PO-Revision-Date: 2015-10-21 14:22-0200\n"
+"POT-Creation-Date: 2016-01-04 11:46-0200\n"
+"PO-Revision-Date: 2016-01-04 11:48-0200\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"Last-Translator: \n"
-"Language-Team: \n"
-"X-Generator: Poedit 1.8.5\n"
+"X-Generator: Poedit 1.8.6\n"
+
+#: templates/404.html:4 templates/404.html.py:6
+msgid "Page Not found"
+msgstr "Página não encontrada"
+
+#: templates/404.html:9
+msgid "We could not find the page you requested. Please review the URL."
+msgstr "Nós não podemos encontrar a página que você solicitou. Por favor, revise a URL."
+
+#: templates/base.html:55
+msgid "Landsat Catalog"
+msgstr "Catálogo Landsat"
 
 #: templates/base.html:56
-msgid "Cloud Rate"
-msgstr "Taxa de Nuvens"
+msgid "Sentinel Catalog"
+msgstr "Catálogo Sentinel"
 
-#: templates/base.html:59
+#: templates/base.html:60
 msgid "Request Scene"
 msgstr "Solicitar Cena"
 
-#: templates/base.html:60
+#: templates/base.html:61
 msgid "My Requests"
 msgstr "Minhas Solicitações"
+
+#~ msgid "Cloud Rate"
+#~ msgstr "Taxa de Nuvens"
